builder/k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: builder
  template:
    metadata:
      labels:
        app: builder
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
      - name: builder
        image: builder:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "2000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - name: httpport
          containerPort: 8080
        - name: jnlpport
          containerPort: 50000
        livenessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: builder-data
          mountPath: /var/jenkins_home
      volumes:
      - name: builder-data
        persistentVolumeClaim:
          claimName: builder-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: builder
  namespace: ci
  labels:
    app: builder
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '8080'
spec:
  selector:
    app: builder
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
