builder/k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: builder-ingress
  namespace: ci
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: builder
spec:
  ingressClassName: nginx
  rules:
  - host: builder.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: builder
            port:
              number: 8080
